--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+
+    <head>
+        <title>Project 1</title>
+    </head>
+    <body>
+        <h1>Hej mak</h1>
+        <br>
+        <hr>
+        <p>noob.</p>
+        <br>
+        <a href="page2.html">
+            Contact us
+        </a>
+
+        <!-- Mak är noob-->
+    </body>
+</html>
