--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Project 1</title>
+        <title>Anton Edman</title>
     </head>
     <body>
         <h1>Hej mak</h1>
