--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 
     <head>
+        
         <title>Anton Edman</title>
+
+        <meta name="description" content="Test site">
+        <meta name="ketwords" content="Anton, Edman">
+        <meta name="author" content="Anton Edman">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <body>
         <h1>Hej mak</h1>
