--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="/">
           <h1 class="text-nowrap m-0 text-decoration-underline">Anton Edman</h1>
         </a>
-        <a href="/about.html">
+        <a href="/about">
           <h2 class="text-nowrap m-0" data-i18n-key="index.contact">
             About / Contact
           </h2>
@@ -102,7 +102,7 @@
                       <p data-i18n-key="index.project1-text4">Project1</p>
                       <p data-i18n-key="index.project1-text5">Project1</p>
                       <a
-                        href="/project1.html"
+                        href="/project1"
                         class="btn"
                         data-i18n-key="index.read-more"
                         >Read more</a
@@ -120,7 +120,7 @@
                       <p data-i18n-key="index.project2-text1">Test</p>
                       <p data-i18n-key="index.project2-text2">Test</p>
                       <a
-                        href="/project2.html"
+                        href="/project2"
                         class="btn"
                         data-i18n-key="index.read-more"
                         >Read more</a
