--- a/project2.html
+++ b/project2.html
@@ -64,7 +64,7 @@
         <a href="/">
           <h1 class="text-nowrap m-0 text-decoration-underline">Anton Edman</h1>
         </a>
-        <a href="/about.html">
+        <a href="/about">
           <h2 class="text-nowrap m-0" data-i18n-key="index.contact">
             About / Contact
           </h2>
