--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <a href="/">
           <h1 class="text-nowrap m-0">Anton Edman</h1>
         </a>
-        <a href="/about.html">
+        <a href="/about">
           <h2
             class="text-nowrap m-0 text-decoration-underline"
             data-i18n-key="index.contact"
